@@ -1,0 +1,3 @@
+#tiptip_content, .chart-tooltip, .wc_error_tip {
+    font-size: 1em !important;
+}
